fix spacing

--- a/assets/component-slider.css
+++ b/assets/component-slider.css
@@ -8,10 +8,6 @@ slider-component.slider-component-full-width {
   --desktop-margin-left-first-item: 1.5rem;
 }
 
-slider-component.page-width {
-  max-width: none;
-}
-
 @media screen and (max-width: 749px) {
   slider-component.page-width {
     padding: 0 1.5rem;
@@ -125,6 +121,10 @@ slider-component.page-width {
 }
 
 @media screen and (min-width: 990px) {
+  .slider-component-desktop.page-width {
+    max-width: none;
+  }
+
   .slider--desktop {
     position: relative;
     flex-wrap: inherit;
