--- a/assets/template-collection.css
+++ b/assets/template-collection.css
@@ -57,6 +57,10 @@
 }
 
 @media screen and (min-width: 990px) {
+  .collection__title--desktop-slider .title {
+    margin-bottom: 2.5rem;
+  }
+
   .collection__title.title-wrapper--self-padded-tablet-down {
     padding: 0 5rem;
   }
@@ -65,7 +69,7 @@
     padding: 0;
   }
 
-  .collection--full-width slider-component:not(.collection__slider-desktop) {
+  .collection--full-width slider-component:not(.slider-component-desktop) {
     padding: 0 1.5rem;
   }
 }
